# payments-integration-example

./: Cargo.toml
src/: main.rs
src/api/: arguments.rs  error.rs  mod.rs  server.rs
src/items/: request.rs  response.rs  routes.rs
src/model/: item.rs  layers.rs  list.rs  mod.rs  populate.rs  tab.rs
src/tabs/: request.rs  response.rs  routes.rs
