[package]
name = "payments-integration-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "sqlite"]}
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs"] }
hyper = "0.14.27"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
clap = { version = "4.4.0", features = ["derive"] }
tower-http = { version = "0.4.3", features = ["trace"] }